Tue Jul  9 01:47:16 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (biglsh_bang): Don't shift a BDIGIT with BITSPERDIG bits.
	  (bigrsh_bang): Ditto.

Tue Jul  9 01:17:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigrsh_bang): Fix bignum digits overrun.

Tue Jul  9 00:46:22 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (biglsh_bang): Fix bignum digits under-run.

Mon Jul  8 23:36:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/win32/lib/win32/registry.rb (Error, API): use WCHAR
	  interfaces.  c.f. [Bug #8508]

Mon Jul  8 23:13:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_pow): move from win32.h and disable strict
	  ANSI mode macro to let _controlfp() stuff defined.
	  [ruby-core:55312] [Bug #8495]

	* numeric.c (finite): add declaration for strict ANSI.
	  [ruby-core:55312] [Bug #8495]

	* thread_win32.c (w32_thread_start_func, thread_start_func_1),
	  (timer_thread_func): use __stdcall instead of _stdcall which is
	  unavailable in strict ANSI mode.  [ruby-core:55312] [Bug #8495]

	* win32/win32.c (gettimeofday): use __cdecl instead of _cdecl.

Mon Jul  8 22:41:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): Arguments for work memory added.
	  (bary_mul_balance): Ditto.
	  (bary_mul_karatsuba): Ditto.

Mon Jul  8 22:03:30 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_sq_fast): New function for testing.
	  (rb_big_mul_toom3): Ditto.

	* internal.h (rb_big_sq_fast): Declared.
	  (rb_big_mul_toom3): Ditto.

Mon Jul  8 21:59:34 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_balance): Initialize a local variable to suppress
	  a warning.

Mon Jul  8 20:55:22 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_balance): Reduce work memory.

Mon Jul  8 08:26:15 2013  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* test/openssl/test_pkey_ec.rb: Skip tests for "Oakley" curves as
	  they are not suitable for ECDSA.
	  [ruby-core:54881] [Bug #8384]
