@@ -7,9 +7,8 @@ require 'rubygems/commands/query_command'
 
 class Gem::Commands::ListCommand < Gem::Commands::QueryCommand
 
-  def initialize(name = 'list',
-                 summary = 'Display gems whose name starts with STRING')
-    super name, summary
+  def initialize
+    super 'list', 'Display gems whose name starts with STRING'
 
     remove_option('--name-matches')
   end
@@ -27,9 +26,8 @@ class Gem::Commands::ListCommand < Gem::Commands::QueryCommand
   end
 
   def execute
-    name = get_one_optional_argument || ''
-    options[:name] = /^#{name}/i
-
+    string = get_one_optional_argument || ''
+    options[:name] = /^#{string}/i
     super
   end
 
