@@ -73,7 +73,7 @@ class Gem::Commands::OwnerCommand < Gem::Command
           request.add_field "Authorization", api_key
         end
 
-        with_response response
+        with_response response, "Removing #{owner}"
       rescue
         # ignore
       end
