@@ -159,29 +159,7 @@ By default, this RubyGems will install gem as:
 
     options[:previous_version] = Gem::Version.new(options[:previous_version])
 
-    release_notes = File.join Dir.pwd, 'History.txt'
-
-    release_notes = if File.exist? release_notes then
-                      history = File.read release_notes
-                      history = history.sub(/^# coding:.*?^=/m, '')
-
-                      text = history.split(HISTORY_HEADER)
-                      text.shift # correct an off-by-one generated by split
-                      version_lines = history.scan(HISTORY_HEADER)
-                      versions = history.scan(VERSION_MATCHER).flatten.map { |x| Gem::Version.new(x) }
-
-                      history_string = ""
-
-                      until versions.length == 0 or versions.shift < options[:previous_version]
-                        history_string += version_lines.shift + text.shift
-                      end
-
-                      history_string
-                    else
-                      "Oh-no! Unable to find release notes!"
-                    end
-
-    say release_notes
+    show_release_notes
 
     say
     say "-" * 78
@@ -456,6 +434,40 @@ abort "#{deprecation_message}"
           File.exist? file
       end
     end
+  end
+
+  def show_release_notes
+    release_notes = File.join Dir.pwd, 'History.txt'
+
+    release_notes =
+      if File.exist? release_notes then
+        history = File.read release_notes
+
+        history.force_encoding Encoding::UTF_8 if
+          Object.const_defined? :Encoding
+
+        history = history.sub(/^# coding:.*?^=/m, '')
+
+        text = history.split(HISTORY_HEADER)
+        text.shift # correct an off-by-one generated by split
+        version_lines = history.scan(HISTORY_HEADER)
+        versions = history.scan(VERSION_MATCHER).flatten.map do |x|
+          Gem::Version.new(x)
+        end
+
+        history_string = ""
+
+        until versions.length == 0 or
+              versions.shift < options[:previous_version] do
+          history_string += version_lines.shift + text.shift
+        end
+
+        history_string
+      else
+        "Oh-no! Unable to find release notes!"
+      end
+
+    say release_notes
   end
 
   def uninstall_old_gemcutter
