@@ -74,6 +74,7 @@ class Gem::Platform
                       when /hpux(\d+)?/ then            [ 'hpux',      $1  ]
                       when /^java$/, /^jruby$/ then     [ 'java',      nil ]
                       when /^java([\d.]*)/ then         [ 'java',      $1  ]
+                      when /^dalvik(\d+)?$/ then        [ 'dalvik',    $1  ]
                       when /^dotnet$/ then              [ 'dotnet',    nil ]
                       when /^dotnet([\d.]*)/ then       [ 'dotnet',    $1  ]
                       when /linux/ then                 [ 'linux',     $1  ]
@@ -155,6 +156,7 @@ class Gem::Platform
               when /^i686-darwin(\d)/     then ['x86',       'darwin',  $1    ]
               when /^i\d86-linux/         then ['x86',       'linux',   nil   ]
               when 'java', 'jruby'        then [nil,         'java',    nil   ]
+              when /^dalvik(\d+)?$/       then [nil,         'dalvik',  $1    ]
               when /dotnet(\-(\d+\.\d+))?/ then ['universal','dotnet',  $2    ]
               when /mswin32(\_(\d+))?/    then ['x86',       'mswin32', $2    ]
               when 'powerpc-darwin'       then ['powerpc',   'darwin',  nil   ]
