@@ -132,8 +132,10 @@ class TestGemSpecFetcher < Gem::TestCase
 
     assert_equal 0, specs_and_sources.size
     assert_equal 1, errors.size
+    pmm = errors.first
 
-    assert_equal "i386-linux", errors[0].platforms.first
+    assert_equal "i386-linux", pmm.platforms.first
+    assert_equal "Found pl (1), but was for platform i386-linux", pmm.wordy
   end
 
   def test_spec_for_dependency_bad_fetch_spec
